--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -23,7 +23,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/*Nav contains list of links to  main paragraph sections of the webiste*/
 header nav {
     padding-top: 15px;
     margin-right: 20px;
@@ -59,6 +59,13 @@ p {
     background-position: center;
 }
 
+/*The main element contains the blue boxes with the SEO, Online Reputation Management, and Social Media Marketing paragraphs.*/
+main {
+    width: 75%;
+    display: inline-block;
+    margin-left: 20px;
+}
+/*Floating images are inside the main paragraph sections*/
 .float-left {
     float: left;
     margin-right: 25px;
@@ -68,13 +75,8 @@ p {
     float: right;
     margin-left: 25px;
 }
-/*The main element contains the blue boxes with the SEO, Online Reputation Management, and Social Media Marketing paragraphs.*/
-main {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
 
+/*The benefits aand benefits-sesction classes apply to the aside sesction sidebar*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -86,49 +88,17 @@ main {
     background-color: #2589bd;
 }
 
-.benefit-lead {
+.benefit-section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit-brand {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-cost {
-    margin-bottom: 32px;
-    color: #ffffff;
-}
-
-.benefit-lead h3 {
+.benefit-section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit-brand h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-cost h3 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-.benefit-lead img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-brand img {
-    display: block;
-    margin: 10px auto;
-    max-width: 150px;
-}
-
-.benefit-cost img {
+.benefit-section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
