fixed typo in css note

--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -76,7 +76,7 @@ main {
     margin-left: 25px;
 }
 
-/*The benefits aand benefits-sesction classes apply to the aside sesction sidebar*/
+/*The benefits and benefits-section classes apply to the aside section sidebar*/
 .benefits {
     margin-right: 20px;
     padding: 20px;
