--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -104,7 +104,7 @@ main {
     max-width: 150px;
 }
 
-.search-engine-optimization {
+.main-section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -131,7 +131,7 @@ main {
     color: #ffffff;
 }
 
-.search-engine-optimization img {
+.main-section img {
     max-height: 200px;
 }
 
@@ -143,7 +143,7 @@ main {
     max-height: 200px;
 }
 
-.search-engine-optimization h2 {
+.main-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
